--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.460.0",
-    "next": "^15.1.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "lucide-react": "^0.469.0",
+    "next": "^15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.17"
   }
 }
