--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: HomeLab Deployment
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - master
@@ -26,13 +25,16 @@ jobs:
       - name: Build Next.js app
         run: npm run build
         
+      - name: Install PM2 if not installed
+        run: |
+          if ! command -v pm2 &> /dev/null; then
+            echo "PM2 is not installed, installing now..."
+            npm install -g pm2
+          fi
+
       - name: Deploy with PM2
         run: |
           git pull
-          if ! command -v pm2 &> /dev/null; then
-            echo "PM2 is not installed"
-            exit 1
-          fi
           npm ci
           npm run build
           pm2 restart ecosystem.config.js
