--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: HomeLab Deployment
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
@@ -17,10 +17,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18' # or your preferred version
+          node-version: '18'
 
       - name: Install dependencies
-        run: npm ci # using ci instead of install for more reliable builds
+        run: npm ci
 
       - name: Build Next.js app
         run: npm run build
