--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "npm run build && npx wrangler deploy"
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.0",
@@ -25,11 +24,9 @@
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
-    "@cloudflare/kv-asset-handler": "^0.3.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
-    "wrangler": "^3.0.0"
+    "tailwindcss": "^3.4.17"
   }
 }
