--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
-    "wrangler": "^3.0.0"
+    "tailwindcss": "^3.4.17"
   }
 }
